--- a/Shirts.ipynb
+++ b/Shirts.ipynb
@@ -22,6 +22,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "## Introduction to OOP"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -160,6 +167,27 @@
     "shirt_two.discount(6)\n",
     "total_discount = shirt_one.price + shirt_two.price\n",
     "total_discount"
+   ]
+  },
+  {
+   "source": [
+    "### Example Dollars versus Euros\n",
+    "If you've changed attribute values directly, you'll have to go through your code and find all the places where US dollars were used, like:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def change_price(self, new_price):\n",
+    "    self.price = new_price * 0.81 # convert dollars to Euros\n",
+    "\n",
+    "shirt_one.change_price(10)"
    ]
   }
  ]
