--- a/Shirts.ipynb
+++ b/Shirts.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 7
     }
    ],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 8
     }
    ],
    "source": [
@@ -172,23 +172,45 @@
   {
    "source": [
     "### Example Dollars versus Euros\n",
-    "If you've changed attribute values directly, you'll have to go through your code and find all the places where US dollars were used, like:"
+    "If you've changed attribute values directly, you'll have to go through your code and find all the places where US dollars were used but if we use a method, then we would only have to change the method to convert from dollars to Euros."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def change_price(self, new_price):\n",
-    "    self.price = new_price * 0.81 # convert dollars to Euros\n",
-    "\n",
-    "shirt_one.change_price(10)"
+    "    self.price = new_price * 0.81 # convert dollars to Euros. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "shirt_one.change_price(10)\n",
+    "print(shirt_one.price)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
