--- a/Shirts.ipynb
+++ b/Shirts.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,13 @@
     "        \n",
     "    def discount(self, discount):\n",
     "\n",
-    "       return self.price * (1 - discount)"
+    "       self.price = self.price * (1 - discount)\n",
+    "       return self.price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +62,12 @@
     "#        - color red, size S, style long-sleeve, and price 25\n",
     "#    - store the object in a variable called shirt_one\n",
     "\n",
-    "shirt_one = Shirt(\"red\", \"S\", \"long-sleeve\", \"25\")"
+    "shirt_one = Shirt(\"red\", \"S\", \"long-sleeve\", 25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -88,49 +89,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "10\n"
+      "8.8\n"
      ]
     }
    ],
    "source": [
     "#     - use the discount method to print the price of the shirt with a 12% discount\n",
     "shirt_one.discount(.12)\n",
-    "print (shirt_one.price)"
+    "print(shirt_one.price)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "#    - instantiate another object with the following characteristics:\n",
     "# .       - color orange, size L, style short-sleeve, and price 10\n",
     "#    - store the object in a variable called shirt_two\n",
-    "shirt_two = Shirt(\"orange\", \"L\", \"short-sleeve\", \"10\")"
+    "shirt_two = Shirt(\"orange\", \"L\", \"short-sleeve\", 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "20"
+       "18.8"
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 53
     }
    ],
    "source": [
@@ -143,18 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "20"
+       "-164.4"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 54
     }
    ],
    "source": [
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
