--- a/Shirts.ipynb
+++ b/Shirts.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 85
     }
    ],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 86
     }
    ],
    "source": [
@@ -180,17 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "def change_price(self, new_price):\n",
-    "    self.price = new_price * 0.81 # convert dollars to Euros. \n"
+    "    self.price = new_price*0.81 #convert dollars to Euros. \n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +205,42 @@
    "source": [
     "shirt_one.change_price(10)\n",
     "print(shirt_one.price)\n"
+   ]
+  },
+  {
+   "source": [
+    "# Syntax Exercise Pants\n",
+    "\n",
+    "- code a Pants class with the following attributes\n",
+    "- color (string) eg 'red', 'yellow', 'orange'\n",
+    "- waist_size (integer) eg 8, 9, 10, 32, 33, 34\n",
+    "- length (integer) eg 27, 28, 29, 30, 31\n",
+    "- price (float) eg 9.28"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pants:\n",
+    "\n",
+    "    def __init__(self, pants_color, pants_size, pants_length, pants_price):\n",
+    "        self.color = pants_color\n",
+    "        self.size = pants_size\n",
+    "        self.style = pants_style\n",
+    "        self.price = pants_price\n",
+    "\n",
+    "    def change_pants_price(self, n_price):\n",
+    "    \n",
+    "        self.price = n_price\n",
+    "\n",
+    "    def discount(self, discount):\n",
+    "\n",
+    "        self.price = self.price * (1 - discount)   "
    ]
   },
   {
